# index.js
@@ -4,6 +4,7 @@ const cors = require('cors');
 const escapegamesRoutes = require('./routes/escapegamesRoutes');
 const reservationsRoutes = require('./routes/reservationsRoutes');
 const clientsRoutes = require('./routes/clientsRoutes');
+const paymentsRoutes = require('./routes/paymentsRoutes');
 require('dotenv').config();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
@@ -16,6 +17,7 @@ app.use(express.json());
 app.use('/api/escapegames', escapegamesRoutes);
 app.use('/api/reservations', reservationsRoutes);
 app.use('/api/clients', clientsRoutes);
+app.use('/api/payments', paymentsRoutes);
 
 
 app.listen (process.env.PORT, () => {
